# my_beginner_tutorials

./: README.md
.cache/clangd/index/: publisher_node.cpp.DE589987B91E5A20.idx
src/beginner_tutorials/: CMakeLists.txt  compile_commands.json  package.xml
src/beginner_tutorials/.cache/clangd/index/: publisher_node.cpp.DE589987B91E5A20.idx  subscriber_node.cpp.A014D8C71973EB41.idx
src/beginner_tutorials/launch/: integration_test.launch.yaml  launch.py
src/beginner_tutorials/results/: cpplint_output.txt
src/beginner_tutorials/results/rosbag2_2024_11_16-07_32_50/: metadata.yaml  rosbag2_2024_11_16-07_32_50_0.db3
src/beginner_tutorials/src/: publisher_node.cpp  subscriber_node.cpp
src/beginner_tutorials/srv/: SetString.srv
src/beginner_tutorials/test/: integration_test_node.cpp
